--- a/drivers/video/mxs/Kconfig
+++ b/drivers/video/mxs/Kconfig
@@ -12,7 +12,14 @@ config FB_MXS
 config FB_MXS_LCD_43WVF1G
 	depends on FB_MXS
 	tristate "SEIKO 4.3' LCD WVGA(800x480) PANEL"
+
+config FB_MXS_LCD_OKAYA7
+	depends on FB_MXS
+	tristate "Okaya 7\" LCD PANEL (TS TPC products)"
 	default y if ARCH_MX28
+	---help---
+	  Say Y here to include support for Technologic System's
+	  7" LCD touch panel.
 
 config FB_MXS_LCD_LMS430
 	depends on FB_MXS
