Added support for the sgtl5000 and wm8750 audio codecs to the ts7600

--- a/sound/soc/imx/Makefile
+++ b/sound/soc/imx/Makefile
@@ -22,6 +22,8 @@ obj-$(CONFIG_SND_MXC_SOC_AC97) += snd-soc-imx-ac97.o
 # i.MX Machine Support
 snd-soc-imx-3stack-wm8350-objs := imx-3stack-wm8350.o
 obj-$(CONFIG_SND_SOC_IMX_3STACK_WM8350) += snd-soc-imx-3stack-wm8350.o
+snd-soc-imx-3stack-wm8750-objs := imx-3stack-wm8750.o
+obj-$(CONFIG_SND_SOC_IMX_3STACK_WM8750) += snd-soc-imx-3stack-wm8750.o
 snd-soc-imx-3stack-sgtl5000-objs := imx-3stack-sgtl5000.o
 obj-$(CONFIG_SND_SOC_IMX_3STACK_SGTL5000) += snd-soc-imx-3stack-sgtl5000.o
 snd-soc-imx-3stack-ak4647-objs := imx-3stack-ak4647.o
