Initramfs.cpio for FPGA rev 1 Cleaned up unused pins Added audio support to kernel Modified SMSC driver to be able to pass mac address to module

--- a/arch/arm/configs/ts4600_defconfig
+++ b/arch/arm/configs/ts4600_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.3
-# Mon Jul 15 16:15:49 2013
+# Mon Aug 19 16:45:28 2013
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -1029,7 +1029,7 @@ CONFIG_FB_SYS_FOPS=m
 #
 CONFIG_FB_MXS=y
 # CONFIG_FB_MXS_LCD_43WVF1G is not set
-# CONFIG_FB_MXS_LCD_OKAYA7 is not set
+CONFIG_FB_MXS_LCD_OKAYA7=y
 # CONFIG_FB_MXS_LCD_LMS430 is not set
 # CONFIG_FB_MXS_TVENC is not set
 # CONFIG_FB_S1D13XXX is not set
@@ -1038,7 +1038,12 @@ CONFIG_FB_ST7565P=m
 # CONFIG_FB_METRONOME is not set
 # CONFIG_FB_MB862XX is not set
 # CONFIG_FB_BROADSHEET is not set
-# CONFIG_BACKLIGHT_LCD_SUPPORT is not set
+CONFIG_BACKLIGHT_LCD_SUPPORT=y
+# CONFIG_LCD_CLASS_DEVICE is not set
+CONFIG_BACKLIGHT_CLASS_DEVICE=y
+# CONFIG_BACKLIGHT_GENERIC is not set
+# CONFIG_BACKLIGHT_ADP8860 is not set
+CONFIG_BACKLIGHT_MXS=y
 
 #
 # Display device support
@@ -1078,14 +1083,13 @@ CONFIG_SND_VERBOSE_PROCFS=y
 # CONFIG_SND_USB is not set
 CONFIG_SND_SOC=m
 CONFIG_SND_MXS_SOC=m
-CONFIG_SND_MXS_SOC_SPDIF_DAI=m
 CONFIG_SND_MXS_SOC_EVK_DEVB=m
 CONFIG_SND_MXS_SOC_DAI=m
-CONFIG_SND_MXS_SOC_EVK_DEVB_SPDIF=m
+# CONFIG_SND_MXS_SOC_EVK_DEVB_SPDIF is not set
 CONFIG_SND_SOC_I2C_AND_SPI=m
 # CONFIG_SND_SOC_ALL_CODECS is not set
+CONFIG_SND_SOC_WM8750=m
 CONFIG_SND_SOC_SGTL5000=m
-CONFIG_SND_SOC_MXS_SPDIF=m
 # CONFIG_SOUND_PRIME is not set
 CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
