--- a/arch/arm/configs/ts7400_defconfig
+++ b/arch/arm/configs/ts7400_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.3
-# Mon Jul 15 14:18:44 2013
+# Thu Oct 31 12:16:40 2013
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -38,7 +38,7 @@ CONFIG_LOCK_KERNEL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 CONFIG_LOCALVERSION=""
-CONFIG_LOCALVERSION_AUTO=y
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_LZO=y
@@ -79,11 +79,18 @@ CONFIG_NAMESPACES=y
 # CONFIG_PID_NS is not set
 # CONFIG_NET_NS is not set
 CONFIG_BLK_DEV_INITRD=y
-CONFIG_INITRAMFS_SOURCE=""
+CONFIG_INITRAMFS_SOURCE="initramfs.cpio"
+CONFIG_INITRAMFS_ROOT_UID=0
+CONFIG_INITRAMFS_ROOT_GID=0
 CONFIG_RD_GZIP=y
 CONFIG_RD_BZIP2=y
 CONFIG_RD_LZMA=y
 CONFIG_RD_LZO=y
+CONFIG_INITRAMFS_COMPRESSION_NONE=y
+# CONFIG_INITRAMFS_COMPRESSION_GZIP is not set
+# CONFIG_INITRAMFS_COMPRESSION_BZIP2 is not set
+# CONFIG_INITRAMFS_COMPRESSION_LZMA is not set
+# CONFIG_INITRAMFS_COMPRESSION_LZO is not set
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
@@ -273,15 +280,15 @@ CONFIG_MXS_PWM_CHANNELS=8
 CONFIG_MXS_AUART_DMA_SUPPORT=y
 CONFIG_MXS_AUART_PORTS=5
 CONFIG_MXS_AUART0_DEVICE_ENABLE=y
-# CONFIG_MXS_AUART0_DMA_ENABLE is not set
+CONFIG_MXS_AUART0_DMA_ENABLE=y
 CONFIG_MXS_AUART1_DEVICE_ENABLE=y
-# CONFIG_MXS_AUART1_DMA_ENABLE is not set
+CONFIG_MXS_AUART1_DMA_ENABLE=y
 CONFIG_MXS_AUART2_DEVICE_ENABLE=y
-# CONFIG_MXS_AUART2_DMA_ENABLE is not set
+CONFIG_MXS_AUART2_DMA_ENABLE=y
 CONFIG_MXS_AUART3_DEVICE_ENABLE=y
-# CONFIG_MXS_AUART3_DMA_ENABLE is not set
-# CONFIG_MXS_AUART4_DEVICE_ENABLE is not set
-# CONFIG_MXS_AUART4_DMA_ENABLE is not set
+CONFIG_MXS_AUART3_DMA_ENABLE=y
+CONFIG_MXS_AUART4_DEVICE_ENABLE=y
+CONFIG_MXS_AUART4_DMA_ENABLE=y
 CONFIG_MXS_RAM_FREQ_SCALING=y
 # CONFIG_MXS_RAM_MDDR is not set
 # CONFIG_MXS_RAM_DDR is not set
@@ -359,7 +366,7 @@ CONFIG_ALIGNMENT_TRAP=y
 #
 CONFIG_ZBOOT_ROM_TEXT=0
 CONFIG_ZBOOT_ROM_BSS=0
-CONFIG_CMDLINE="console=ttyAM0,115200 root=/dev/mmcblk0p3 rw rootwait nowait"
+CONFIG_CMDLINE="console=null root=/dev/mmcblk0p2 rw rootwait nowait"
 CONFIG_CMDLINE_FORCE=y
 # CONFIG_XIP_KERNEL is not set
 # CONFIG_KEXEC is not set
@@ -653,7 +660,7 @@ CONFIG_MTD_NAND_GPMI_NFC=y
 # UBI - Unsorted block images
 #
 CONFIG_MTD_UBI=y
-CONFIG_MTD_UBI_WL_THRESHOLD=4096
+CONFIG_MTD_UBI_WL_THRESHOLD=256
 CONFIG_MTD_UBI_BEB_RESERVE=1
 # CONFIG_MTD_UBI_GLUEBI is not set
 
@@ -729,7 +736,7 @@ CONFIG_NETDEVICES=y
 # CONFIG_BONDING is not set
 # CONFIG_MACVLAN is not set
 # CONFIG_EQUALIZER is not set
-# CONFIG_TUN is not set
+CONFIG_TUN=m
 # CONFIG_VETH is not set
 CONFIG_PHYLIB=y
 
@@ -753,7 +760,7 @@ CONFIG_PHYLIB=y
 # CONFIG_FIXED_PHY is not set
 # CONFIG_MDIO_BITBANG is not set
 CONFIG_NET_ETHERNET=y
-CONFIG_MII=m
+CONFIG_MII=y
 # CONFIG_AX88796 is not set
 # CONFIG_SMC91X is not set
 # CONFIG_DM9000 is not set
@@ -916,7 +923,7 @@ CONFIG_MAX_RAW_DEVS=8192
 CONFIG_I2C=m
 CONFIG_I2C_BOARDINFO=y
 CONFIG_I2C_COMPAT=y
-# CONFIG_I2C_CHARDEV is not set
+CONFIG_I2C_CHARDEV=m
 CONFIG_I2C_HELPER_AUTO=y
 
 #
@@ -966,7 +973,7 @@ CONFIG_SPI_MXS=m
 #
 # SPI Protocol Masters
 #
-# CONFIG_SPI_SPIDEV is not set
+CONFIG_SPI_SPIDEV=m
 # CONFIG_SPI_TLE62X0 is not set
 
 #
@@ -1069,45 +1076,7 @@ CONFIG_REGULATOR_MXS=y
 #
 # CONFIG_VGA_CONSOLE is not set
 CONFIG_DUMMY_CONSOLE=y
-CONFIG_SOUND=m
-CONFIG_SOUND_OSS_CORE=y
-CONFIG_SOUND_OSS_CORE_PRECLAIM=y
-CONFIG_SND=m
-CONFIG_SND_TIMER=m
-CONFIG_SND_PCM=m
-CONFIG_SND_JACK=y
-CONFIG_SND_SEQUENCER=m
-# CONFIG_SND_SEQ_DUMMY is not set
-CONFIG_SND_OSSEMUL=y
-CONFIG_SND_MIXER_OSS=m
-CONFIG_SND_PCM_OSS=m
-CONFIG_SND_PCM_OSS_PLUGINS=y
-# CONFIG_SND_SEQUENCER_OSS is not set
-CONFIG_SND_HRTIMER=m
-CONFIG_SND_SEQ_HRTIMER_DEFAULT=y
-# CONFIG_SND_DYNAMIC_MINORS is not set
-CONFIG_SND_SUPPORT_OLD_API=y
-# CONFIG_SND_VERBOSE_PROCFS is not set
-# CONFIG_SND_VERBOSE_PRINTK is not set
-# CONFIG_SND_DEBUG is not set
-# CONFIG_SND_RAWMIDI_SEQ is not set
-# CONFIG_SND_OPL3_LIB_SEQ is not set
-# CONFIG_SND_OPL4_LIB_SEQ is not set
-# CONFIG_SND_SBAWE_SEQ is not set
-# CONFIG_SND_EMU10K1_SEQ is not set
-# CONFIG_SND_DRIVERS is not set
-# CONFIG_SND_ARM is not set
-CONFIG_SND_SPI=y
-# CONFIG_SND_USB is not set
-CONFIG_SND_SOC=m
-CONFIG_SND_MXS_SOC=m
-CONFIG_SND_MXS_SOC_EVK_DEVB=m
-CONFIG_SND_MXS_SOC_DAI=m
-# CONFIG_SND_MXS_SOC_EVK_DEVB_SPDIF is not set
-CONFIG_SND_SOC_I2C_AND_SPI=m
-# CONFIG_SND_SOC_ALL_CODECS is not set
-CONFIG_SND_SOC_SGTL5000=m
-# CONFIG_SOUND_PRIME is not set
+# CONFIG_SOUND is not set
 # CONFIG_HID_SUPPORT is not set
 CONFIG_USB_SUPPORT=y
 CONFIG_USB_ARCH_HAS_HCD=y
@@ -1230,7 +1199,7 @@ CONFIG_USB_OTG_UTILS=y
 # CONFIG_NOP_USB_XCEIV is not set
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
-CONFIG_MMC_UNSAFE_RESUME=y
+# CONFIG_MMC_UNSAFE_RESUME is not set
 
 #
 # MMC/SD/SDIO Card Drivers
