Removed rootwait of SD card, we wait for it in initramfs

--- a/arch/arm/configs/ts4600_defconfig
+++ b/arch/arm/configs/ts4600_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.3
-# Tue Nov  5 11:05:12 2013
+# Tue Apr 15 15:00:08 2014
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -364,7 +364,7 @@ CONFIG_ALIGNMENT_TRAP=y
 #
 CONFIG_ZBOOT_ROM_TEXT=0
 CONFIG_ZBOOT_ROM_BSS=0
-CONFIG_CMDLINE="console=null root=/dev/mmcblk0p3 rw nowait rootwait lpj=1130496"
+CONFIG_CMDLINE="console=null nowait lpj=1130496"
 CONFIG_CMDLINE_FORCE=y
 # CONFIG_XIP_KERNEL is not set
 # CONFIG_KEXEC is not set
