--- a/arch/arm/configs/ts4600_defconfig
+++ b/arch/arm/configs/ts4600_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.3
-# Tue Apr 15 15:00:08 2014
+# Thu Oct 30 12:24:20 2014
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -496,7 +496,17 @@ CONFIG_VLAN_8021Q=y
 #
 # CONFIG_NET_PKTGEN is not set
 # CONFIG_HAMRADIO is not set
-# CONFIG_CAN is not set
+CONFIG_CAN=m
+CONFIG_CAN_RAW=m
+# CONFIG_CAN_BCM is not set
+
+#
+# CAN Device Drivers
+#
+# CONFIG_CAN_VCAN is not set
+# CONFIG_CAN_DEV is not set
+# CONFIG_CAN_DEBUG_DEVICES is not set
+CONFIG_CAN_FLEXCAN=m
 # CONFIG_IRDA is not set
 # CONFIG_BT is not set
 # CONFIG_AF_RXRPC is not set
@@ -685,6 +695,7 @@ CONFIG_RT2X00=m
 # CONFIG_RT73USB is not set
 # CONFIG_RT2800USB is not set
 # CONFIG_WL12XX is not set
+CONFIG_WL12XX_PLATFORM_DATA=y
 # CONFIG_ZD1211RW is not set
 # CONFIG_ATH6K_LEGACY is not set
 
