--- a/drivers/gpio/Kconfig
+++ b/drivers/gpio/Kconfig
@@ -120,6 +120,12 @@ config GPIO_MAX7300
 	help
 	  GPIO driver for Maxim MAX7301 I2C-based GPIO expander.
 
+config GPIO_TSGPIO
+	tristate "Technologic Systems FPGA I2C GPIO"
+	depends on I2C
+	help
+	  GPIO driver for TS I2C FPGA
+
 config GPIO_MAX732X
 	tristate "MAX7319, MAX7320-7327 I2C Port Expanders"
 	depends on I2C
