Added i2c-2 bus on GPIO for TS-DC767 on TS-7670 Requires kernel compile to enable in config, CONFIG_DC767_I2C

--- a/drivers/i2c/busses/Kconfig
+++ b/drivers/i2c/busses/Kconfig
@@ -851,4 +851,10 @@ config SCx200_ACB
 	  This support is also available as a module.  If so, the module
 	  will be called scx200_acb.
 
+config DC767_I2C
+	bool "I2C Bus for TS-DC767 on TS-7670"
+	depends on I2C_GPIO
+	help
+	  blah blah blah
+
 endmenu
