Revert "Made several changes to attempt to fix the weird imx28 ethernet link-up/link-down yoyo with some external devices.  The PHY hardware reset was being toggled every time the link went down, which with the weird devices, was happening over and over (because link goes down as soon as it comes up).  The genphy_update_link function is changed so that it lies about the link having gone down until it has read link-down status five times from the PHY.  The weird devices do go down right after link-up, but then they come back up (and stay up) after a few seconds, so this change is to prevent the driver restarting on the first link-down read."
This reverts commit ac0cfa940e9fabee717cd0fff82188c42839e10f.

Undo commits from ethernet fixes that did not entirely resolve the problem
This problem is addressed by backported patches

--- a/arch/arm/configs/ts7400_defconfig
+++ b/arch/arm/configs/ts7400_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.3
-# Tue Dec 15 14:40:52 2015
+# Fri Feb 13 16:47:47 2015
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -772,7 +772,7 @@ CONFIG_PHYLIB=y
 # CONFIG_LXT_PHY is not set
 # CONFIG_CICADA_PHY is not set
 # CONFIG_VITESSE_PHY is not set
-CONFIG_SMSC_PHY=y
+# CONFIG_SMSC_PHY is not set
 # CONFIG_BROADCOM_PHY is not set
 # CONFIG_ICPLUS_PHY is not set
 # CONFIG_REALTEK_PHY is not set
@@ -992,7 +992,6 @@ CONFIG_I2C_MXS_SELECT0=y
 # Other I2C/SMBus bus drivers
 #
 # CONFIG_I2C_STUB is not set
-# CONFIG_DC767_I2C is not set
 # CONFIG_I2C_DEBUG_CORE is not set
 # CONFIG_I2C_DEBUG_ALGO is not set
 # CONFIG_I2C_DEBUG_BUS is not set
