All i.MX28: Added backport patches to fix a number of issues with FEC and SMSC PHY   Loss of link, unstable link, failure to detect PHY were all problems   that have been observed across the series with various link partners Add SMSC PHY support to TS-7600/TS-4600 Enable CONFIG_MX28_ENET_ISSUE for all i.MX28 powered TS SBCs
---
Backport of
https://git.kernel.org/cgit/linux/kernel/git/next/linux-next.git/\
commit/drivers/net/ethernet/freescale/fec.c?id=6ea0722fb8cdeacc774733c259d33bf45529e91b

Upon detection of a FDX/HDX change the interface is restarted twice.

---
Backport of
https://git.kernel.org/cgit/linux/kernel/git/next/linux-next.git/\
commit/drivers/net/ethernet/freescale/fec.c?id=d97e74976982a35168c7f131cce0d93537337a26

Proviously we would only restart the FEC when PHY link or duplex state
changed. PHY does not always bring down the link for speed changes, in
which case we would not detect any change and keep FEC running.

Switching link speed without restarting the FEC results in the FEC being
stuck in an indefinite state, generating error conditions for every
packet.

---
Upon detection of a new ethernet connection (link)
the fec driver resets the MX28 FEC unit to setup
the registers for e.g. DMA to the new link.

During that fec-reset the ENET_CLK to the PHY
drops to 25 MHz (MII Mode) even if 50 MHz (RMII Mode)
is configured.

This violates PHY specification as it generates
internal and external timing from that clock.

The fec driver also resets the PHY via a GPIO
to have it re-set itself on completion of a new fec setup.

This PHY reset causes it to lose link.

While automatically reestablishing the link the PHY gets
polled by the phy state machine for a new link.

If this link is found by the PHY before polled by the
state machine: everything is fine. "Link Up" is reported.
If not, "Link down" is reported and when the PHY
finally gets link, the fec/phy resets start again.

Signed-off-by: Michael Krummsdorf <michael.krummsdorf@tqs.de>

---
The etherne

--- a/arch/arm/configs/ts4600_defconfig
+++ b/arch/arm/configs/ts4600_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.3
-# Thu Aug 13 14:20:59 2015
+# Thu Dec 15 17:24:16 2016
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -264,6 +264,7 @@ CONFIG_MACH_TS7600=y
 CONFIG_VECTORS_PHY_ADDR=0
 CONFIG_MXS_TIMER_WITH_MACH=y
 # CONFIG_MEM_mDDR is not set
+CONFIG_MX28_ENET_ISSUE=y
 # CONFIG_MX28_SUSPEND_TO_RAM is not set
 CONFIG_WORKAROUND_ARCUSB_REG_RW=y
 CONFIG_MXS_ICOLL=y
@@ -641,7 +642,7 @@ CONFIG_PHYLIB=y
 # CONFIG_LXT_PHY is not set
 # CONFIG_CICADA_PHY is not set
 # CONFIG_VITESSE_PHY is not set
-# CONFIG_SMSC_PHY is not set
+CONFIG_SMSC_PHY=y
 # CONFIG_BROADCOM_PHY is not set
 # CONFIG_ICPLUS_PHY is not set
 # CONFIG_REALTEK_PHY is not set
