--- a/arch/arm/configs/ts7400_defconfig
+++ b/arch/arm/configs/ts7400_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.3
-# Fri Feb 13 16:47:47 2015
+# Fri Dec 16 15:16:38 2016
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -264,6 +264,7 @@ CONFIG_MACH_TS7400=y
 CONFIG_VECTORS_PHY_ADDR=0
 CONFIG_MXS_TIMER_WITH_MACH=y
 # CONFIG_MEM_mDDR is not set
+CONFIG_MX28_ENET_ISSUE=y
 CONFIG_MX28_SUSPEND_TO_RAM=y
 CONFIG_WORKAROUND_ARCUSB_REG_RW=y
 CONFIG_MXS_ICOLL=y
@@ -992,6 +993,7 @@ CONFIG_I2C_MXS_SELECT0=y
 # Other I2C/SMBus bus drivers
 #
 # CONFIG_I2C_STUB is not set
+# CONFIG_DC767_I2C is not set
 # CONFIG_I2C_DEBUG_CORE is not set
 # CONFIG_I2C_DEBUG_ALGO is not set
 # CONFIG_I2C_DEBUG_BUS is not set
