TS-7400-V2/TS-7670:   Added unix domain sockets support for DoubleStore NBD server   Added cmdline option to support proper NBD partitioning   Added timeout for detecing second SD card for 2x DoubleStore

--- a/arch/arm/configs/ts7400_defconfig
+++ b/arch/arm/configs/ts7400_defconfig
@@ -365,7 +365,7 @@ CONFIG_ALIGNMENT_TRAP=y
 #
 CONFIG_ZBOOT_ROM_TEXT=0
 CONFIG_ZBOOT_ROM_BSS=0
-CONFIG_CMDLINE="console=null nowait lpj=1130496"
+CONFIG_CMDLINE="console=null nowait lpj=1130496 nbd.max_part=64"
 CONFIG_CMDLINE_FORCE=y
 # CONFIG_XIP_KERNEL is not set
 # CONFIG_KEXEC is not set
